--- a/src/css/feedback.module.css
+++ b/src/css/feedback.module.css
@@ -5,6 +5,7 @@
   gap: 5rem;
   color: var(--secondary-color);
   padding: 7.2rem 8rem 2rem;
+  overflow-x: hidden;
 }
 .feedback_contents {
   width: 45%;
@@ -65,7 +66,7 @@
 }
 @media (max-width: 768px) {
   .feedback_container {
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 4rem;
   }
   .feedback_contents {
